# Reverse-Shell

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: settings.json.example
diagrams/: architecture.md  connection_flow.md  connection_flow.mermaid
docs/: architecture.md
scripts/: config.sh  publish_public.ps1
src/: reverse_shell.py
tests/: test_functional.py  test_payloads.py  test_syntax.py
